<resources>
    <string name="app_name">Aparoksha\'16</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">HOME</string>
    <string name="event">EVENT LOG</string>
    <string name="schedule">SCHEDULE</string>
    <string name="updates">UPDATES</string>
    <string name="eventnow">EVENTS NOW</string>
    <string name="favorites">FAVORITES</string>
    <string name="sponsors">SPONSORS</string>
    <string name="contacts">CONTACTS</string>
    <string name="developers">DEVELOPERS</string>
    <string name="desc_alkhwarizm">Alkhwarizm is annual coding event of IIITA\’s Techfest Aparoksha.
It will be a 5 hour individual contest with algorithmic problem set of diverse nature. If you have the appetite for algorithmic problem solving and want to participate in one of the India\'s most prestigious coding event, don\’t miss it out.
The contest will consist of 10 thrilling algorithmic problems created by the finest coders of IIITA, of all times. Contestants need to solve the problems in a duration of 5 hrs. Only individual participation is allowed. </string>
    <string name="rules_alkhwarizm">
1) This challenge consists of 10 problems in total.
\n\n2) Duration of the contest is for five hours.
\n\n3) All inputs for the programming problem are from STDIN and output to STDOUT.
\n\n4) You can code directly on hackerrank interface. Hackerrank supports 20 major languages. You can have a look at the environment in which we run your code. You can try out sample code given in Solve Me First to get familiar with I/O.
\n\n5) Questions have a Compile and Test option where you can run your solution against sample cases, before submitting.
\n\n6) You can submit solution for a problem as many times as you want. But there is a penalty for each wrong submissions.</string>
    <string name="prize_alkhwarizm">1st Rs 20,000\n2nd Rs 15,000\n3rd Rs 10,000</string>
    <string name="desc_ageofempires">Age of Empires III: The Asian Dynasties is the second official expansion pack for the real-time strategy video game Age of Empires III developed through a collaboration between Ensemble Studios and Big Huge Games, and published by Microsoft Game Studios. The Mac version was ported over, developed and published by Destineer\'s MacSoft Games. The game is the second expansion pack following The WarChiefs. The game introduces three new civilizations; China, Japan, and India. It also introduced minor people, campaigns, maps, and game modes.</string>
    <string name="rules_ageofempires">
1)A team of four is required.
\n\n2)4v4 matches will be played.
\n\n3)Everyone will start playing with 25 home city level.
\n\n4)Game will be playing on classic rules with moderate speed.
\n\n5)Prelims will be held as per the participation.
\n\n6)No cheats will be allowed.
\n\n7)Organizer decision will be final.</string>
    <string name="prize_ageofempires">1st   Rs 2,500
    \n 2nd  Rs 1,500 \n 3rd  Rs 500
    </string>
        <string name="desc_androidquiz">Questions will be both of subjective and mcq type (first round)
		      Rapid fire (second round)</string>
    <string name="rules_androidquiz">1)There will be two rounds(first round - question answer
						second round - rapid fire)
                \n\n2)Time limit will be 15-20 minutes for each round
		\n\n3)No external help is allowed
		\n\n4)Team of maximum 2 members</string>
    <string name="prize_androidquiz">Exciting prizes and goodies.</string>
    <string name="desc_blackbox">An Electronic circuit design event. It is an event that will be up for two days (i.e. 3rd and 4th April, 2016). There will be 6 questions in total. On each day you will be given 3 questions and the questions will be live at 12:00 am, 8:00 am and 12:00 pm of the day. Submissions for all the three problems will be open till midnight of that day. All the submissions are to be mailed at *blackbox.aparoksha16@gmail.com*. The filename should follow this format:  *username_questionNumber.zip*. Only Single thread is to be created (Any changes in previous answer can be made by replying to the original answer).</string>
    <string name="rules_blackbox">
1. This competition is open for all students who are interested in electronics.
\n\n2. There is no restriction for participation.
\n\n3. This is an individual event.
\n\n4. Solution to the given problem should be submitted in the form of project file generated on any of the following simulators - MULTISIM, PROTEUS or you can draw the circuit on a paper and send us the snapshot of the solution.
\n\n5. DON\'T USE MICROCONTROLLERS AND MICROPROCESSORS in your circuit.
\n\n6. The marks will be allotted according to the correctness and execution of the logic, time efficiency and power consumption of the circuit submitted.
\n\n7. Your solution should have a brief description about the working of your circuit failing to which no marks will be allotted. The description of the circuit should be given in a text file which should be zipped along with the project file/snapshot of the solution.
\n\n8. In case of multiple solutions, last solution submitted will be evaluated.
\n\n9. Decision of the organizers would be final.
\n\n10. Any kind of plagiary or unfair means would lead to disqualification from the event.</string>
    <string name="prize_blackbox">1st Rs 1,500\n2nd Rs 1,000\n3rd Rs 500</string>
    <string name="desc_blindwar">Participant will have to write a code in the computer with the screen of the monitor closed in a certain time interval . There will be 2 rounds and the winners are declared
based on their outputs,time taken  . In any case of clash there will be an extra round .</string>
    <string name="rules_blindwar">
1st round:
n1)Participant has to write the program on computer without errors with monitor switch off.
\n2)The candidate should aim to successfully write the code in minimum amount of time with minimum errors.
\n3)10 candidates with 100% compiled program with correct output will be promoted to the second round.In case no one gets the correct  output  finally marks will be given on basis of the ‘quality’ of the program and number of errors.
\n\n2nd round:
\n1)Rules for second round will be same as that of the first one but the level of complexity of the code will be higher and accordingly time limit is increased.
\n2)No papers, pendrives and codes are allowed.</string>
    <string name="prize_blindwar">1st  Rs 2,500\n2nd Rs 1,500\n3rd Rs 1,000</string>
     <string name="desc_bolt"> A fun event where you get to test the efficiency and power of your robot. Race it with other robots to know where it stands. Your robot should be competent enough to cross all the hurdles placed on the track and emerge to be the winner.
\nOBSTACLES (Hurdles in arena )
\n1) Speed brakes
\n2) Dirty region
\n3) Merry go around
\n4) Up in the Air
\n5) Mind the gap
\n6) Swirl
\n7) Hanging wall
\n8) Down the hill
\n9) Maze
\n10) Smooth / Tilted path
\n11) Jump to finish</string>
    <string name="rules_bolt">
1)Team can contain any number of members , there will be no prelims it\’s open to all .
\n\n2)Team should have to bring their own robots .
\n\n3)A total of 15 minutes run time (arena time) will be given to every team.
\n\n4)During the game play, if any part of a robot is destructed/ dismantled/ damaged the team will be given a timeout to repair at an expense of a penalty, while the next team for will be called the play.
\n\n5)Once the race begins,  hand touches are not allowed.
\n\n6)If the Robot traverse the path, and moves off track, then the Robot would be placed back at a checkpoint with an expense of penalty.
wireless and custom made robots will be awarded extra credits.</string>
    <string name="prize_bolt">1st Rs 4,000\n2nd Rs 2,000\nBest First year Rs 1,000</string>
    <string name="desc_cfresh">C-Fresh is a programming contest held each year at IIIT-Allahabad to promote competitive programming among the students of first year. Contestants will need to appear in qualifying round in a team of two. This will be followed by a onsite round to be held on 3rd of April, 2016.</string>
    <string name="rules_cfresh">
1. This is a Team contest. Number of members in each team is 2.
\n\n2. The contest is limited to the students studying in their 1st year Undergraduate Course.
\n\n3. All inputs for the programming problem are from STDIN and output to STDOUT.
\n\n4. You can submit solution for a programming problem as many times as you want.
\n\n5. Only languages allowed are C, C++.
\n\n6. All the problems have same points alloted to them.
\n\n7. Users are ranked according to the most problems solved. Ties will be broken by the total time for each user in ascending order of time.
\n\n8. The total time is the sum of the time consumed for each problem solved. The time consumed for a solved problem is the time elapsed from the beginning of the contest to the submission of the first accepted run plus 20 penalty minutes for every previously rejected run for that problem(Wrong answer, Time limit exceeded, Runtime Error). There is no time consumed for a problem that is not solved.
\n\n9. The decision of the organizers in declaring the results will be final. No queries in this regard will be entertained.
\n\n10. Any participant found to be indulging in any form of malpractice will be immediately disqualified.</string>
    <string name="prize_cfresh">1st Rs 5,000\n2nd Rs 3,000\n3rd Rs 2,000</string>
    <string name="desc_chunt">Candiates will be required to solve a set of problems based on random language using the relevant tutorials provided. The questions will cover the basic understanding of the language and it\'s implementation.</string>
    <string name="rules_chunt">
        1. It\'s an individual event.
\n\n2. Language will be provided on the spot and relevant tutorials will also be given.
\n\n3. Questionare will be given along with the tutorials.
\n\n4. systems will be provided .</string>
    <string name="prize_chunt">Goodies and prizes worth Rs 7,000</string>
    <string name="desc_counterstrike">Play the world\’s number 1 online action game. Engage in an incredibly realistic brand of terrorist warfare in this wildly popular team-based game. Ally with teammates to complete strategic missions. Take out enemies. Your role affects your team\’s success. Lead your team to victory.</string>
    <string name="rules_counterstrike">1.Players: 5 vs 5
\n\n2.Maps: 2 maps (3 maps for the final).
\n\n3.Rounds Per Map: 30
\n\n4.Winning: The first clan that wins 16 rounds, team will change after 15 rounds.
\n\n5.Time per Round: 1:45 minutes.
\n\n6.Buytime: 15 seconds
\n\n7.Startmoney: $800 for regulation play, $10,000 for overtime periods
\n\n8.Freeze time: 15 seconds
\n\n9.C4 Timer: 35 seconds
\n\n10.Game Play: Single Elimination in all rounds.
\n\n11.Official Maps: de_dust2, de_inferno, de_nuke, de_train.
\n\n12.Winner eliminates 1 map and opponent eliminates 1 map to decide which two maps to play upon.
\n\n13.There will be a knife round to decide the side for terrorist and counter terrorist.
\n\n14.Basic configuration files (CFG) will be allowed with no illegal scripts.
\n\n15.Each team in the game must have a unique clan tag, each member on the team must have the same tag.
\n\n16.Tie breaker: If there is a tie (15-15) in rounds, 6 rounds shall be played. 3 rounds as Terrorists and 3 as Counter Terrorists. Initial start money will be $10000.

\n\n17.A player can only be one team, meaning that you can\'t play for two different clans in the competition.
\n\n18.Gay gun (Krieg 550 commando and D3/AU-1 and BULLPUP) and shield are not allowed.
\n\n19.Silent C4 installation is not allowed.
\n\n20.Any use of game exploits, cheats, or any other play deemed “unfair” by an admin may result in disciplinary action up to and including disqualification from the tournament.
</string>
    <string name="prize_counterstrike">Prizes worth Rs 16,000</string>
</resources>