<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llayout"
        android:orientation="horizontal">
    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@+id/llayout"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_group"
                style="@style/LinearLayout.GuillotineItem"
                android:layout_marginTop="@dimen/guillotine_medium_margin"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:onClick="chome"
                >

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/ic_home" />

                <TextView
                    style="@style/TextView.GuillotineItem"
                    android:id="@+id/thome"
                    android:text="@string/home" />
            </LinearLayout>

    <LinearLayout
        android:id="@+id/feed_group"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="cevent">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_events" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/tevents"
            android:text="@string/event" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_group"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="cschedule">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_schedule" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/tschedule"
            android:text="@string/schedule" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group1"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="cupdates">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_updates" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/tupdates"
            android:text="@string/updates" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group2"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="ceventnow">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_eventsnow" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/teventsnow"
            android:text="@string/eventnow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group3"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="cfavorites">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_favorites" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/tfavorites"
            android:text="@string/favorites" />
    </LinearLayout>

    <LinearLayout
                android:id="@+id/settings_group10"
                style="@style/LinearLayout.GuillotineItem"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:onClick="csponsors">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/ic_sponsors" />

                <TextView
                    style="@style/TextView.GuillotineItem"
                    android:id="@+id/tsponsors"
                    android:text="@string/sponsors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group4"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="ccontact">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_contacts" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/tcontacts"
            android:text="@string/contacts" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group5"
        style="@style/LinearLayout.GuillotineItem"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="cdeveloper">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_developers" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:id="@+id/tdevelopers"
            android:text="@string/developers" />
    </LinearLayout>

   </LinearLayout>
 </ScrollView>

</RelativeLayout>